testsuite/tests/properties/invalid_dynvar/call_bound.lkt
import common

class Example: BaseNode implements TokenNode {
    fun get_int_impl(): Int = {
        bind my_var = 12;
        node.internal_get_int()
    }
}
